# flexible_arm

./: .gitignore  .gitmodules  =  Pipfile  README.md  animation.py  bc_policy_1  beam_params.py  check_env.py  compute_equilibria.py  controller.py  discretization_analysis.py  estimator.py  evaluator.py  figures_for_benelux.py  flexible_arm.py  flexible_arm_3dof.py  gym_env.py  how_to_jiminy.md  imitate.py  imitate_mpc.py  imitate_mpc_base_example.py  imitation_builder.py  imitation_evaluate.py  imitator.py  integrator.py  jiminy_vs_own.py  kpi.py  megahed.py  meshcat.py  mpc.py  mpc_3dof.py  mpc_evaluate.py  ocp.py  optimal_planner.py  playground.py  plotting.py  poly5_planner.py  regulation_task.py  requirements.txt  (+18 more)
c_generated_code/: Makefile  acados_sim_solver_flexible_arm_nq13.c  acados_sim_solver_flexible_arm_nq13.h  acados_sim_solver_flexible_arm_nq23.c  acados_sim_solver_flexible_arm_nq23.h  acados_sim_solver_flexible_arm_nq3.c  acados_sim_solver_flexible_arm_nq3.h  acados_sim_solver_flexible_arm_nq5.c  acados_sim_solver_flexible_arm_nq5.h  acados_sim_solver_flexible_arm_nq7.c  acados_sim_solver_flexible_arm_nq7.h  acados_sim_solver_flexible_arm_nq9.c  acados_sim_solver_flexible_arm_nq9.h  acados_solver.pxd  acados_solver_flexible_arm_nq13.c  acados_solver_flexible_arm_nq13.h  acados_solver_flexible_arm_nq23.c  acados_solver_flexible_arm_nq23.h  acados_solver_flexible_arm_nq3.c  acados_solver_flexible_arm_nq3.h  acados_solver_flexible_arm_nq5.c  acados_solver_flexible_arm_nq5.h  acados_solver_flexible_arm_nq7.c  (+27 more)
cpp/: CMakeLists.txt
cpp/src/: main.cpp
(+239 files in other folders)
